--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,7 @@
   margin: 0 auto;
   border: 1px #dbdbdb solid ;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* gap: 2rem; */
 }
