removed the borders

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,14 +7,14 @@
  align-items: center;
  justify-content: center;
  height: 100%;
- border: 1px solid blueviolet;
+ /* border: 1px solid blueviolet; */
 }
 
 form{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    border: 1px solid red;
+    /* border: 1px solid red; */
    flex: 1;
    padding: 10px;
 }
