--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 .container{
   width: 45%;
   margin: 0 auto;
-  border: 1px #dbdbdb solid ;
+  /* border: 1px #dbdbdb solid ; */
   height: 100%;
   display: flex;
   flex-direction: column;
