--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,6 +3,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
 
 }
