abit responsive for tablets and phones

--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -13,3 +13,10 @@
     min-width: auto;
     max-width: 40%;
 }
+@media only screen and (max-width: 600px) {
+    .Message{max-width: 80%;}
+  }
+  @media only screen and (min-width: 768px) {
+    .Message{max-width: 80%;}
+
+  }
