--- a/src/App.css
+++ b/src/App.css
@@ -18,4 +18,16 @@
   display: flex;
   flex-direction: column;
   /* gap: 2rem; */
+}@media only screen and (max-width: 600px) {
+ .container{
+
+  width: 90%;
+ }
+}
+@media only screen and (min-width: 768px) {
+  .container{
+
+    width: 90%;
+   }
+
 }
