--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 }
 .container{
   width: 45%;
+  position: relative;
   margin: 0 auto;
   /* border: 1px #dbdbdb solid ; */
   height: 100%;
@@ -27,7 +28,13 @@
 @media only screen and (min-width: 768px) {
   .container{
 
-    width: 90%;
+    width: 50%;
    }
 
 }
+@media only screen and (max-width: 600px) {
+  .container{
+ 
+   width: 90%;
+  }
+ }
