--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,5 +4,7 @@
     align-items: center;
     justify-content: center;
     /* border: 1px solid yellow; */
+    position: sticky;
+    top: 0;
 
 }
