--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -7,5 +7,10 @@
 }
 @media only screen and (max-width: 600px) {
 
-   .Content{width: 100%;}
+   .Content{
+    width: 100%;
+    margin-top: 16%;
+
+}
   }
+  
