--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,4 +13,9 @@
     background-color: #121212;
     margin: 0 auto;
 
-}
+} 
+@media only screen and (max-width: 600px) {
+    .Header{
+        width: 90vw;
+    }
+  }
